# fast-browser-use

./: .gitignore  CODEBUDDY.md  Cargo.toml  LICENSE  README.md  README_CN.md  rustfmt.toml
src/: lib.rs
src/browser/: config.rs  session.rs
src/dom/: element.rs  extract_dom.js  mod.rs  selector_map.rs  tree.rs  yaml.rs
src/mcp/: handler.rs  mod.rs
src/tools/: click.rs  close.rs  close_tab.rs  convert_to_markdown.js  evaluate.rs  extract.rs  go_back.rs  go_forward.rs  hover.rs  html_to_markdown.rs  input.rs  markdown.rs  mod.rs  navigate.rs  new_tab.rs  press_key.rs  read_links.rs  screenshot.rs  scroll.rs  select.rs  snapshot.rs  switch_tab.rs  tab_list.rs  utils.rs  wait.rs
tests/: browser_tools_integration.rs  dom_integration.rs  markdown_integration.rs  navigation_integration.rs  tab_management_integration.rs
