[package]
name = "browser-use"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "browser-use"
path = "src/bin/browser-use.rs"
required-features = ["mcp-server"]

[features]
default = ["mcp-server"]
mcp-server = [
    "rmcp/macros",
    "rmcp/server",
    "rmcp/transport-io",
    "tokio",
    "clap",
]

[dependencies]
headless_chrome = "1.0.18"
rmcp = "0.8.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
schemars = "1.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "sync"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
