[package]
name = "browser-use"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"
required-features = ["mcp-server"]

[features]
default = ["mcp-server"]
mcp-server = [
    "rmcp/macros",
    "rmcp/server",
    "rmcp/transport-io",
    "rmcp/transport-sse-server",
    "rmcp/transport-streamable-http-server",
    "tokio",
    "clap",
    "axum",
    "tokio-util",
]

[dependencies]
headless_chrome = "1.0.18"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
schemars = "1.1"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }
