[package]
name = "browser-use"
version = "0.1.0"
edition = "2024"
authors = ["BB-fat"]
description = "A lightweight Rust library for browser automation via Chrome DevTools Protocol (CDP), featuring a built-in Model Context Protocol (MCP) server for AI-driven browser automation"
license = "MIT"
repository = "https://github.com/BB-fat/browser-use-rs"
readme = "README.md"
keywords = ["browser", "automation", "cdp", "devtools", "mcp"]
categories = ["web-programming", "development-tools"]

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"
required-features = ["mcp-server"]

[features]
default = ["mcp-server"]
mcp-server = [
    "rmcp/macros",
    "rmcp/server",
    "rmcp/transport-io",
    "rmcp/transport-sse-server",
    "rmcp/transport-streamable-http-server",
    "tokio",
    "clap",
    "axum",
    "tokio-util",
    "env_logger",
]

[dependencies]
headless_chrome = "1.0.18"
rmcp = "0.8.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
schemars = "1.1"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "signal",
], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }
log = "0.4"
env_logger = { version = "0.11", optional = true }
html2md = "0.2"

[dev-dependencies]
urlencoding = "2.1"
